fix messagebox spacing

--- a/template.css
+++ b/template.css
@@ -124,7 +124,7 @@ img{
     color: #60686e;
     position: absolute;
     margin-left: 500px;
-    margin-top: 25px;
+    margin-top: -50px;
 }
 
 #messagetext{
